<resources>
    <string name="app_name">TMDB фильмы</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="release_date">Дата релиза:</string>
    <string name="year">Год:</string>
    <string name="rating">Оценка:</string>
    <string name="runtime">Длительность:</string>
    <string name="genres">Жанры:</string>
    <string name="countries">Страна:</string>
    <string name="language">Язык:</string>
    <string name="description">Описание</string>
    <string name="enter_name">Введите название фильма</string>
    <string name="n">Нет соединения с интернетом.\nПожалуйста, проверьте подключение.</string>
    <string name="open">Открыть в браузере</string>
    <string name="clear">Очистить фильтр</string>
    <string name="срусл">Применить фильтр</string>
    <string name="enter_year">Enter Year</string>
    <string name="enter_yea">Выберите год</string>
</resources>